namespaces/live.cloud-platform.service.justice.gov.uk/sarah-sandbox-1/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "sarah-sandbox-1"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "equinity-data-migration"
    cloud-platform.justice.gov.uk/application: "sarah sandbox 1"
    cloud-platform.justice.gov.uk/owner: "Equiniti Data Migration: laa-eq-data-migration-team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/sarah-learning.git"
    cloud-platform.justice.gov.uk/team-name: "secure-doc-storage-team"
    cloud-platform.justice.gov.uk/review-after: "2025-11-19"
